crates/pgls_hover/tests/snapshots/column_hover_quoted_column_name.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select "email" from auth.users
           ↑ hovered here
```

# Hover Results
### `auth.users.email`  
```plain  
varchar(255) - not null
  
```  
---    
```plain  
  
```
