crates/pgls_hover/tests/snapshots/create_policy.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
create policy "my cool pol" on users for all to public with check (true);
                                 ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4
- name: text
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 16.38 kB  
```
