crates/pgls_hover/tests/snapshots/grant_select.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
grant select on users to public;
                  ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4 - not null
- name: text - nullable
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 16.38 kB  
```
