crates/pgls_hover/tests/snapshots/hover_on_schemas.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select * from auth.users;
                ↑ hovered here
```

# Hover Results
### `auth` - owned by postgres  
```plain  
  
```  
---    
```plain  

~16 kB, 1 tables, 0 views, 0 functions  
```
