crates/pgls_hover/tests/snapshots/no_hover_keyword.snap
---
source: crates/pgt_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select id from users
   ↑ hovered here
```

# Hover Results
No hover information found.
