crates/pgls_hover/tests/snapshots/revoke_select.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
revoke select on users from public;
                   ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4
- name: text
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 16.38 kB  
```
