crates/pgls_hover/tests/snapshots/table_hover.snap
---
source: crates/pgls_hover/tests/hover_integration_tests.rs
expression: snapshot
---
# Input
```sql
select id from users
                  ↑ hovered here
```

# Hover Results
### `public.users` - 🔓 RLS disabled  
```plain  
Columns:
- id: int4
- email: varchar(255)
  
```  
---    
```plain  

~0 rows, ~0 dead rows, 8.19 kB  
```
